Fix: Liens des cartes invisible (car blanc sur blanc)

--- a/public/style/event-card.css
+++ b/public/style/event-card.css
@@ -51,3 +51,7 @@
     opacity:100%;
     transition:0.3s;
 }
+
+.card_list > a{
+    color:#00bff3;
+}
